Closed Bug 364718 Opened 18 years ago Closed 18 years ago

Crash [@ nsXULElement::HandleDOMEvent]

Categories

(Core :: DOM: Events, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: smaug, Assigned: smaug)

References

Details

(Keywords: verified1.8.0.10, verified1.8.1.2)

Attachments

(1 file)

nsXULElement::HandleDOMEvent  [mozilla/content/xul/content/src/nsXULElement.cpp, line 1977]
PresShell::HandleDOMEventWithTarget  [mozilla/layout/base/nsPresShell.cpp, line 6524]
nsButtonBoxFrame::DoMouseClick  [mozilla/layout/xul/base/src/nsButtonBoxFrame.cpp, line 182]
nsButtonBoxFrame::MouseClicked  [mozilla/layout/xul/base/src/nsButtonBoxFrame.h, line 61]
PresShell::HandleEventInternal  [mozilla/layout/base/nsPresShell.cpp, line 6466]
PresShell::HandleEventWithTarget  [mozilla/layout/base/nsPresShell.cpp, line 6323]
nsEventStateManager::CheckForAndDispatchClick  [mozilla/content/events/src/nsEventStateManager.cpp, line 3207]
nsEventStateManager::PostHandleEvent  [mozilla/content/events/src/nsEventStateManager.cpp, line 2170]
PresShell::HandleEventInternal  [mozilla/layout/base/nsPresShell.cpp, line 6497]
PresShell::HandleEvent  [mozilla/layout/base/nsPresShell.cpp, line 6261]
nsViewManager::HandleEvent  [mozilla/view/src/nsViewManager.cpp, line 2559]
nsViewManager::DispatchEvent  [mozilla/view/src/nsViewManager.cpp, line 2246]
HandleEvent  [mozilla/view/src/nsView.cpp, line 174]
nsWindow::DispatchEvent  [mozilla/widget/src/windows/nsWindow.cpp, line 1389]
nsWindow::DispatchMouseEvent  [mozilla/widget/src/windows/nsWindow.cpp, line 6433]
ChildWindow::DispatchMouseEvent  [mozilla/widget/src/windows/nsWindow.cpp, line 6680]
That stack trace was from 1.8 TB
Attached patch proposed patchSplinter Review
xulcommand event dispatching is strange anyway, so I guess
it is ok to not to allow dispatching it when xul element isn't 
in DOM.
Attachment #249432 - Flags: superreview?(bugmail)
Attachment #249432 - Flags: review?(bugmail)
There is a testcase for this in bug 364720, but that works only with the
patch in bug 364720.
Blocks: 364720
Attachment #249432 - Flags: superreview?(bugmail)
Attachment #249432 - Flags: superreview+
Attachment #249432 - Flags: review?(bugmail)
Attachment #249432 - Flags: review+
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Comment on attachment 249432 [details] [diff] [review]
proposed patch

This crash shows up in ff2 crasher list, and may also happen in 1.8.0.x
Attachment #249432 - Flags: approval1.8.1.2?
Attachment #249432 - Flags: approval1.8.0.10?
Comment on attachment 249432 [details] [diff] [review]
proposed patch

Approved for both branches, a=jay for drivers.
Attachment #249432 - Flags: approval1.8.1.2?
Attachment #249432 - Flags: approval1.8.1.2+
Attachment #249432 - Flags: approval1.8.0.10?
Attachment #249432 - Flags: approval1.8.0.10+
hi smaug, can you add more details to this bug on how to verify this fix?  I tried launching the attachment in bug 364720 but not much i could do with reproing it to crash. also, your initial comments says the stack trace is in TB, but the crash attachment test case is for firefox?   Which is it?  Thanks
On trunk you can use the testcase in bug 364720, and if using debug build, you'll see warning:
WARNING: NS_ENSURE_TRUE(domDoc) failed: file /home/smaug/mozilla/mozilla_cvs/mozilla/content/xul/content/src/nsXULElement.cpp, line 1561
If the testcase doesn't crash this bug is fixed.

Not sure how to test this on branches.

Btw, when I say a stack trace is in TB, I mean talkback, not thunderbird ;) Currently this is #164 in 2.0.0.1 crasher list.
http://talkback-public.mozilla.org/reports/firefox/FF2001/FF2001-topcrashers.html
Verified fixed on trunk, I'm indeed seeing the warning in my debug build when using the testcase in bug 364720 as mentioned in comment 7.

I've verified that the patch went in the branches by looking at the branch logs.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: