Bug 364718, Crash [@ nsXULElement::HandleDOMEvent], r+sr=sicking